# Code-Juliett

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/user/: App.h
resources/models/: Cube.mdl  House.mat  Pistol.mat  Pistol.mdl  Plane.mdl  Player.mat  Test.mat  Test.mdl  Test.scn
resources/shaders/: fragment.glsl
src/user/: App.c
